# execution-satellite

./: .gitignore  CODEX-ORIENTATION.json  README.md  pyproject.toml  zoo-project.json
docs/raw/: 001__coordinates.json  002__broad-principles.json  003__communication-protocol.json  004__job-cell-outline.json  005__stickerdb-integration-guide.json
src/executionsatellite/: __main__.py  app.py  core.py  ui.py
tests/: test_core.py  test_ui.py
