[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-satellite"
version = "0.1.0"
description = "Human-gated InputLog executor for StickerDB production jobs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC0-1.0" }
dependencies = [
  "lionscliapp",
]

[project.scripts]
execution-satellite = "executionsatellite.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
